--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	<dependency>	
 	    <groupId>org.seleniumhq.selenium</groupId>
 	    <artifactId>selenium-java</artifactId>
-	    <version>4.27.0</version>
+	    <version>4.28.1</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.testng/testng -->
 	<dependency>
@@ -53,14 +53,39 @@
 	    <artifactId>extentreports</artifactId>
 	    <version>5.1.2</version>
 	</dependency>
-	<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
 	<dependency>
-	    <groupId>com.aventstack</groupId>
-	    <artifactId>extentreports</artifactId>
-	    <version>5.1.2</version>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-api</artifactId>
+	    <version>2.0.9</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-simple</artifactId>
+	    <version>2.0.9</version>
 	</dependency>
   </dependencies>
-  
+  <profiles>
+    <profile>
+      <id>Regression</id>
+		  <build>
+		    <pluginManagement>
+		      <plugins>     
+			    <plugin>
+			      <groupId>org.apache.maven.plugins</groupId>
+			      <artifactId>maven-surefire-plugin</artifactId>
+			      <version>3.5.2</version>
+			      <configuration>
+			        <suiteXmlFiles>
+			          <suiteXmlFile>testSuites/testng.xml</suiteXmlFile>
+			        </suiteXmlFiles>
+			      </configuration>
+			    </plugin>
+		      </plugins>
+		    </pluginManagement>
+		  </build>     
+    </profile>
+  </profiles>
+ 
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
