--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,25 @@
 		    </pluginManagement>
 		  </build>     
     </profile>
+    <profile>
+      <id>Smoke</id>
+		  <build>
+		    <pluginManagement>
+		      <plugins>     
+			    <plugin>
+			      <groupId>org.apache.maven.plugins</groupId>
+			      <artifactId>maven-surefire-plugin</artifactId>
+			      <version>3.5.2</version>
+			      <configuration>
+			        <suiteXmlFiles>
+			          <suiteXmlFile>testSuites/testng.xml</suiteXmlFile>
+			        </suiteXmlFiles>
+			      </configuration>
+			    </plugin>
+		      </plugins>
+		    </pluginManagement>
+		  </build>     
+    </profile>
   </profiles>
  
   <build>
