--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
         <artifactId>log4j-slf4j2-impl</artifactId>
         <version>2.22.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
+	<dependency>
+    	<groupId>io.qameta.allure</groupId>
+    	<artifactId>allure-testng</artifactId>
+    	<version>2.29.1</version>
+	</dependency>
+    
   </dependencies>
 
   <build>
